<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="cal">Calculator</string>
    <string name="enter_email_i_d">Enter email i’d</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="signup_to_continue">Signup to continue</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
</resources>