<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/primary_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="36dp" />
                <TextView
                    android:id="@+id/secondary_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_continue"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="52dp"
                    android:src="@drawable/ic_baseline_calculate_24"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fragment_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">


            </FrameLayout>


            <LinearLayout
                android:id="@+id/text_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/third_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp" />
                <TextView
                    android:id="@+id/go_to_signup_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>